# FHERMA-Challenge

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  config.json  docker-compose.yaml  generate_keys.cpp  generate_keys.h  helper.cpp  helper.h  main.cpp  run.sh  setup.sh  sort_ckks.cpp  sort_ckks.h  validate_result.cpp  validate_result.h
array_sort/: CMakeLists.txt  config.json  generate_keys.cpp  generate_keys.h  globals.cpp  main.cpp  run.sh  sort_ckks.cpp  sort_ckks.h  validate_result.cpp
lookup/: CMakeLists.txt  config.json  generate_keys.cpp  generate_keys.h  lookup.cpp  lookup.h  main.cpp  run.sh  testcase.json  validate_result.cpp
min_max/: CMakeLists.txt  config.json  generate_keys.cpp  generate_keys.h  globals.cpp  globals.h  main.cpp  max_min_ckks.cpp  max_min_ckks.h  run.sh  testcase.json  validate_result.cpp
